--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.10.0"
+    "node-pg-format": "^1.3.5",
+    "pg": "^8.10.0",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "jest": "^29.5.0"
