--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   }
 }
