--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "node-pg-format": "^1.3.5",
     "pg": "^8.10.0",
     "pg-format": "^1.0.4"
