--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "node-pg-format": "^1.3.5",
+    "node-router": "^1.0.0",
     "pg": "^8.10.0",
     "pg-format": "^1.0.4"
   },
