--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "connect-pg-simple": "^8.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-session": "^1.17.3",
     "node-pg-format": "^1.3.5",
     "node-router": "^1.0.0",
     "pg": "^8.10.0",
