--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "express-session": "^1.17.3",
     "node-pg-format": "^1.3.5",
     "node-router": "^1.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.10.0",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
