--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=14.18.0"
+  },
   "dependencies": {
     "axios": "^1.3.4",
     "connect-pg-simple": "^8.0.0",
