--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-pg-simple": "^8.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
